--- a/.classpath
+++ b/.classpath
@@ -14,5 +14,6 @@
 	<classpathentry kind="lib" path="/home/deepthihptecnot/Downloads/commons-io-2.8.0/commons-io-2.8.0-sources.jar"/>
 	<classpathentry kind="lib" path="/home/deepthihptecnot/Downloads/commons-io-2.8.0/commons-io-2.8.0-tests.jar"/>
 	<classpathentry kind="lib" path="/home/deepthihptecnot/Downloads/commons-io-2.8.0/commons-io-2.8.0-test-sources.jar"/>
+	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
